wrapped links in a list, fixed bugs, added adaptive and padding

--- a/submissions/Nik3264/Hooli-style Popup/style.css
+++ b/submissions/Nik3264/Hooli-style Popup/style.css
@@ -3,15 +3,16 @@
     margin: 0;
     box-sizing: border-box;
 }
+
 body {
     margin: 0 auto;
     background-color: #ebebeb;
     overflow: hidden;
-    
 }
+
 :root {
     --color-header:#aee4f3;
-    --color-blue:#0057B8;/*№00a6eb*/
+    --color-blue:#0057B8;
     --color-yellow:#FFD700;
 }
 
@@ -25,6 +26,7 @@ body {
         margin-top:250px;
     }
 }
+
 @keyframes green {
     from {
         opacity:0;
@@ -34,6 +36,7 @@ body {
         margin-top: 200px;
     }
 }
+
 @keyframes sun {
     from {
         margin-top:20vh;
@@ -55,9 +58,11 @@ body {
     animation-duration: 4s;
     animation-name: text;
 }
-.sun, .green {
+.sun, 
+.green {
     position: absolute;
 }
+
 .green {
     width: 100vw;
     height: 100vh;
@@ -68,6 +73,7 @@ body {
     animation-duration: 1s;
     animation-name: green;
 }
+
 .sun {
     width: 50vw;
     max-width: 600px;
@@ -77,6 +83,7 @@ body {
     animation-duration: 3s;
     animation-name: sun;
 }
+
 .header {
     position: relative;
     display: flex;
@@ -98,89 +105,128 @@ body {
     padding-left: 1em;
 }
 
+.header_nav {
+    width: 40%;
+}
+
 .menu {
-    display: flex;
-    width:40%;
+    list-style: none;
+    display: flex;    
     justify-content: space-around;
     padding-top: 20px;
     padding-bottom: 20px;
     font-size: 1.1em;
 }
-a{
-    text-decoration: none;
-    padding: 5px;
+
+.menu_item>a{
+    height: 32px;
+    text-align: center;
+    padding-top: 5px;
 }
-a:active{
+
+.menu_item a,
+.popup_menu_item {
+    display: inline-block;
+    text-decoration: none;
+    width: 74px;
+}
+
+.menu_item a:active,
+.popup_menu_item:active {
     color:var(--color-blue);
     background-color: var(--color-yellow);
 }
-a:focus{
+
+.menu_item a:focus,
+.popup_menu_item:focus-within {
     background-color: var(--color-yellow);
     border-radius: 10%;
-}
-a:hover{
+
     box-shadow: 0 1px 4px rgba(0, 0, 0, .3),
     -23px 0 20px -23px rgba(0, 0, 0, .6),
     23px 0 20px -23px rgba(0, 0, 0, .6),
     inset 0 0 40px rgba(0, 0, 0, .1);
 }
+
+.menu_item a:hover,
+.popup_menu_item:hover {
+    box-shadow: 0 1px 4px rgba(0, 0, 0, .3),
+    -23px 0 20px -23px rgba(0, 0, 0, .6),
+    23px 0 20px -23px rgba(0, 0, 0, .6),
+    inset 0 0 40px rgba(0, 0, 0, .1);
+}
+
 .menu_img:hover {
     box-shadow: 0 1px 4px rgba(0, 0, 0, .3),
     -23px 0 20px -23px rgba(0, 0, 0, .6),
     23px 0 20px -23px rgba(0, 0, 0, .6),
     inset 0 0 40px rgba(0, 0, 0, .1);
 }
-.menu_wrap {
-    width: 50px;
-}
 
-.menu_img{
+.menu_img {
     width: 2.5em;
     height: 2.5em;
     padding: 5px;
     margin-top:-6px;
     border-radius: 50%;
-
 }
+
 .header_menu_label {
     padding-top: 12px;
 }
+
 .header_menu_input:focus + * .menu_img {
     background-color: var(--color-yellow);
 }
-.popup_menu{
+
+.header_menu_input, 
+.popup_menu_more {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+.popup_menu_more {
+    position: absolute;
+}
+
+.popup_menu_wrap {
     position: absolute;
     right:5vh;
     top:85px;
+    padding: 10px;
     z-index: 10;
-    width: 286px;
+    width : 286px;
     max-height: 560px;
-    overflow-y: auto;
+    overflow-y:auto;
     overflow-x: hidden;
     background-color:#e0e0e0;
     box-shadow: 0 1px 6px rgb(32 33 36 / 20%);
 }
 
-.header_menu_input, .popup_menu_more {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-}
-.popup_menu_more {
-    position: absolute;
-}
-.popup_menu, .popup_menu_last {
+.popup_menu_wrap,
+.menu_label_more {
     display: none;
+
 }
-.popup_menu_item{
-    text-align: center;
-}
-.popup_menu_item > span, .popup_menu_item_last > span {
+
+.popup_menu_item {
     font-size: 0.8em;
     text-align: center;
+    z-index: 100;
 }
-.header_menu_input:checked ~ .popup_menu{
+
+.header_menu_input:checked ~ .popup_menu_wrap {
+    display: flex;
+    flex-direction: column;
+    align-items:stretch;
+}
+
+.popup_menu {
+    list-style: none;
     display: grid;
+    margin-bottom: 16px;
+    width: 250px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
     grid-gap: 15px;
@@ -189,19 +235,30 @@ a:hover{
         "e f g"
         "h i j"
         "k l m"
-        "b b b"
-        "n o p"
-        "q r s"
     ;
 }
+
 .header_menu_label_more {
-    grid-area: b;
+    border-width:0 0 2px 0;
+    border-style:none none solid none;
+    border-color: #e0e0e0;
     text-align: center;
 }
 
-.popup_menu_more:checked ~ .popup_menu_last{
+.popup_menu_more:checked ~  .menu_label_more {
+    list-style: none;
     display: grid;
+    margin-top: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-gap: 15px;
+    grid-template-areas: 
+        "a c d"
+        "e f g"
+        "h i j"
+    ;
 }
+
 .header_menu_label_more_ico {
     display: inline-block;
     width: 25px;
@@ -213,25 +270,18 @@ a:hover{
     transition: all 0.5s;
 }
 
-.popup_menu_more:checked + * .header_menu_label_more_ico{
+.popup_menu_more:checked + * .header_menu_label_more_ico {
     transform: rotate( 225deg);
 }
-.popup_menu_more:hover + .header_menu_label_more{
-    border-width:0 0 2px 0;
-    border-style:none none solid none;
-    border-color: var(--color-yellow);
-}
-.popup_menu_more:focus + .header_menu_label_more{
-    border-width:0 0 2px 0;
-    border-style:none none solid none;
-    border-color: var(--color-yellow);
-}
-.popup_menu_more:active + .header_menu_label_more{
-    border-width:0 0 2px 0;
-    border-style:none none solid none;
-    border-color: var(--color-yellow);
-}
 
+.popup_menu_more:hover + .header_menu_label_more,
+.popup_menu_more:focus + .header_menu_label_more,
+.popup_menu_more:active + .header_menu_label_more
+{
+    border-width:0 0 2px 0;
+    border-style:none none solid none;
+    border-color: var(--color-yellow);
+}
 
 @media screen and (min-width:250px) and (max-width:767px) {
     .popup_menu {
@@ -239,9 +289,42 @@ a:hover{
     }
 }
 
-@media screen and (min-width:250px) and (max-width:510px) {
-    .menu {
-        width:80%;
+@media screen and (min-width:1025px) and (max-width:1200px) {
+    .header_nav {
+        width:40%;
         font-size: 1em;
     }
 }
+
+@media screen and (min-width:769px) and (max-width:1024px) {
+    .header_nav {
+        width:50%;
+        font-size: 1em;
+    }
+}
+
+@media screen and (min-width:481px) and (max-width:768px) {
+    .header_nav {
+        width:60%;
+        font-size: 1em;
+    }
+    .menu_item>a{
+        height: 28px;
+        text-align: center;
+        padding-top: 3px;
+    }
+}
+
+@media screen and (max-width:480px) {
+    .header_nav {
+        width:80%;
+        font-size: 1em;
+    }
+    .menu_item>a{
+        height: 22px;
+        width: auto;
+        text-align: center;
+        padding-top: 2px;
+    }
+}
+
